add_compile_options(${WF_WARNING_FLAGS})
add_subdirectory(domain)
add_subdirectory(bindings/lua)
add_subdirectory(services)
add_subdirectory(framework)
add_subdirectory(components/cegui)
add_subdirectory(components/entitymapping)
add_subdirectory(components/lua)
add_subdirectory(components/navigation)
add_subdirectory(components/ogre)
add_subdirectory(main)
